ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc10
    • Affects Version/s: 4.4.0-rc9
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-06-29
    • 25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      To prevent a segmentation fault, we need to check that the database exists after acquiring the database lock here otherwise this can crash if the database is non-existent by trying to get the profiling level.

      This doesn't affect the master branch due to SERVER-47803.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: