SERVER-48753 '_abortIndexBuildsAndDropCollection()' should verify that the database exists after acquiring its lock